--- a/src/index.html
+++ b/src/index.html
@@ -11,4 +11,5 @@
 <body>
   <app-root></app-root>
 </body>
+<script src="https://unpkg.com/compromise@latest/builds/compromise.min.js"></script>
 </html>
